# demo

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake_modules/: FindASSIMP.cmake  FindFreeImage.cmake  FindGLEW.cmake  FindGLFW.cmake  FindGLM.cmake
demo1/: .gitignore  CMakeLists.txt  main.cpp
demo1/input/: build.cpp.cmake.in  build.h.cmake.in
demo1/res/shaders/simple/: frag.glsl  vert.glsl
demo1/res/shaders/test1/: frag.glsl  geom.glsl  tesc.glsl  tese.glsl  vert.glsl
demo1/src/demo/: demo.cpp  demo.h  intdef.h  port.h  strdef.cpp
demo1/src/demo/container/: dynamic_array.cpp  dynamic_array.h  fixed_array.cpp  fixed_array.h  list.cpp  list.h  map.cpp  map.h  set.cpp  set.h
demo1/src/demo/memory/: allocator_guard.cpp  allocator_guard.h  counting_allocator.cpp  default_allocator.h  iallocator.h  memory_utils.cpp
demo1/src/demo/object/: camera.cpp  camera.h  itickable.h  model_object.cpp  model_object.h  object.cpp  object.h  scene.h  transform.cpp  transform.h
demo1/src/demo/render/: grapi.cpp  grapi.h  irenderable.cpp  irenderable.h  irendertarget.cpp  irendertarget.h  mesh.cpp  mesh.h  model.cpp  model.h  renderer.cpp  renderer.h  rendertarget.h  shader.cpp  shader.h  window.cpp  window.h
demo1/src/demo/utility/: hasher.h
demo2/: CMakeLists.txt  main.cpp
demo2/res/models/: box.mtl  cyborg.mtl
demo2/res/shaders/debug/: frag.glsl  geom.glsl  vert.glsl
demo2/res/shaders/simple/: frag.glsl  vert.glsl
demo2/src/demo/: demo.cpp  demo.h  intdef.cpp  intdef.h  port.cpp  strdef.h
demo2/src/demo/container/: fixed_array.h  list.h  map.h
demo2/src/demo/memory/: allocator_guard.h  counting_allocator.h  default_allocator.cpp  iallocator.cpp  memory_utils.h  stack_guard.cpp  stack_guard.h
demo2/src/demo/object/: camera.cpp  camera.h  itickable.h  model_object.h  object.cpp  object.h  scene.cpp  transform.cpp
demo2/src/demo/render/: grapi.cpp  grapi.h  irenderable.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  renderer.cpp  renderer.h  rendertarget.cpp  rendertarget.h  shader.cpp  shader.h  texture.cpp  texture.h  window.cpp
demo2/src/demo/resource/: material_factory.cpp  material_factory.h  mesh_factory.cpp  mesh_factory.h  model_factory.cpp  model_factory.h  resource_manager.cpp  resource_manager.h  texture_factory.cpp  texture_factory.h
demo2/src/demo/utility/: clock.cpp  clock.h  hash_utils.cpp  hash_utils.h  hasher.cpp
